--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">WeatherApp</string>
+    <string name="app_name">Weather App</string>
+    <string name="forecast_weather">Forecast</string>
+    <string name="current_weather">Current</string>
+    <string name="weather_message">Welcome!</string>
 </resources>
